# cnb-shim.rs

./: Cargo.toml
src/: main.rs
