[package]
name = "cnb-shim"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
http = "0.2"
libcnb = { git = "https://github.com/Malax/libcnb.rs", branch = "buildpack_toml_serialize" }
log = "0.4"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"
